# efl

./: configure.ac  meson.build  meson_options.txt
.ci/: ci-mingw-cross-build.sh
data/elementary/config/default/: base.src.in
data/elementary/config/mobile/: base.src.in
data/elementary/config/standard/: base.src.in
src/: Makefile_Efl_Mono.am  Makefile_Elementary.am
src/bindings/cxx/eina_cxx/: meson.build
src/bindings/cxx/eo_cxx/: meson.build
src/bindings/mono/ecore_evas_mono/: ecore_evas.cs
src/bindings/mono/efl_mono/: efl_all.cs  efl_libs.cs.in
src/bindings/mono/eina_mono/: eina_accessor.cs  eina_array.cs  eina_binbuf.cs  eina_common.cs  eina_config.cs  eina_container_common.cs  eina_error.cs  eina_hash.cs  eina_inarray.cs  eina_inlist.cs  eina_iterator.cs  eina_list.cs  eina_log.cs  eina_promises.cs  eina_slice.cs  eina_strbuf.cs  eina_stringshare.cs  eina_value.cs
src/bindings/mono/eldbus_mono/: eldbus_common.cs  eldbus_config.cs  eldbus_connection.cs  eldbus_message.cs  eldbus_object.cs  eldbus_pending.cs  eldbus_proxy.cs  eldbus_service.cs
src/bindings/mono/eo_mono/: iwrapper.cs  workaround.cs
src/examples/elementary/: efl_ui_list_view_example_3.c  efl_ui_unit_converter.cs  efl_ui_view_list_example_3.c  elm_relative_container_example_01.c
src/lib/ecore/: efl_loop_handler.eo
src/lib/ecore_con/: meson.build
src/lib/eina/: eina_promise.h
src/lib/elementary/: Efl_Ui.h  Elementary.h  efl_ui.eot  efl_ui_button.c  efl_ui_button.eo  efl_ui_calendar.c  efl_ui_calendar.eo  efl_ui_calendar_item.eo  efl_ui_check.c  efl_ui_clock.c  efl_ui_clock.eo  efl_ui_focus_composition.c  efl_ui_focus_composition.eo  efl_ui_focus_composition_adapter.eo  efl_ui_focus_graph.c  efl_ui_focus_layer.c  efl_ui_focus_layer.eo  efl_ui_focus_manager.c  efl_ui_focus_manager.eo  efl_ui_focus_manager_base.c  efl_ui_focus_manager_base.eo  efl_ui_focus_manager_calc.c  efl_ui_focus_manager_calc.eo  efl_ui_focus_manager_private.h  efl_ui_focus_manager_root_focus.c  efl_ui_focus_manager_root_focus.eo  efl_ui_focus_manager_sub.c  efl_ui_focus_manager_sub.eo  efl_ui_focus_parent_provider.eo  efl_ui_focus_parent_provider_gen.c  efl_ui_focus_parent_provider_standard.c  efl_ui_focus_util.c  efl_ui_focus_util.eo  efl_ui_focusable.c  efl_ui_focusable.eo  efl_ui_frame.c  efl_ui_frame.eo  efl_ui_image_zoomable.c  efl_ui_image_zoomable.eo  efl_ui_layout.c  (+122 more)
src/lib/eo/: eina_types.eot  eo.c
src/lib/eolian_cxx/: meson.build
src/lib/eolian_cxx/grammar/: meson.build
src/lib/evas/canvas/: evas_canvas.eo
src/modules/elementary/prefs/: elm_entry.c
src/static_libs/libunibreak/: unibreakbase.c  unibreakbase.h
src/tests/ecore/: efl_app_suite.c  efl_app_suite.h  efl_app_test_promise.c
src/tests/ecore_cxx/: meson.build
src/tests/efl_mono/: BasicDirection.cs  Eina.cs  Eldbus.cs  Eo.cs  EoPromises.cs  Errors.cs  Evas.cs  Events.cs  FunctionPointerMarshalling.cs  FunctionPointers.cs  Parts.cs  Promises.cs  Strbuf.cs  Strings.cs  Structs.cs  Value.cs  ValueEolian.cs  dummy_test_object.eo  libefl_mono_native_test.c
src/tests/eina_cxx/: meson.build
src/tests/elementary/: elm_suite.c  elm_suite.h  elm_test_elm_focus.c  elm_test_focus.c  elm_test_focus_common.c  elm_test_focus_common.h  elm_test_focus_sub.c  elm_test_popup.c  focus_test.eo  focus_test_sub_main.eo  meson.build
src/tests/eo_cxx/: meson.build
src/tests/eolian_cxx/: meson.build
