eolian_cxx_header_src += files([
  'address_of.hpp',
  'alternative.hpp',
  'attribute_conditional.hpp',
  'attribute_reorder.hpp',
  'attribute_replace.hpp',
  'attributes.hpp',
  'blacklist.hpp',
  'base_class_definition.hpp',
  'case.hpp',
  'class_declaration.hpp',
  'class_definition.hpp',
  'class_implementation.hpp',
  'container.hpp',
  'context.hpp',
  'converting_argument.hpp',
  'c_type.hpp',
  'eps.hpp',
  'function_declaration.hpp',
  'function_definition.hpp',
  'generator.hpp',
  'header_guards.hpp',
  'header.hpp',
  'header_include_directive.hpp',
  'html_escaped_string.hpp',
  'implementation_include_directive.hpp',
  'impl_header.hpp',
  'indentation.hpp',
  'integral.hpp',
  'keyword.hpp',
  'klass_def.hpp',
  'kleene.hpp',
  'list.hpp',
  'meta.hpp',
  'namespace.hpp',
  'parameter.hpp',
  'part_declaration.hpp',
  'part_implementation.hpp',
  'qualifier_def.hpp',
  'sequence.hpp',
  'string.hpp',
  'type_function_declaration.hpp',
  'type.hpp',
  'type_impl.hpp',
  'types_definition.hpp',
  'type_traits.hpp'
])
